bug fix: soft keyboard should not effect widget size on mobile

--- a/src/styles/components/_aquaponic.scss
+++ b/src/styles/components/_aquaponic.scss
@@ -4,8 +4,8 @@
     text-align: center;
     padding-top: $s-size;
     padding-bottom: 10rem;
-    // height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     @media (min-width: $desktop-breakpoint) {
         padding-top: $l-size * 2;
     }
